# encore

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: DownloadExternals.cmake  GenerateBuildInfo.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  dsp_interface.cpp  dsp_interface.h  input_details.cpp  input_details.h  sink_details.cpp  sink_details.h
src/citra_headless/: CMakeLists.txt  audio_resampler.cpp  audio_resampler.h  cinterface.cpp  citra_context.cpp  citra_context.h  config_headless.cpp  config_headless.h  precompiled_headers.h  savestate_mt.cpp  savestate_mt.h
src/citra_headless/emu_window/: emu_window_headless.cpp  emu_window_headless.h  emu_window_headless_gl.cpp  emu_window_headless_gl.h  emu_window_headless_sw.cpp  emu_window_headless_sw.h
src/citra_headless/input_factory/: headless_axis_factory.cpp  headless_axis_factory.h  headless_button_factory.cpp  headless_button_factory.h  headless_input_factory.h  headless_motion_factory.cpp  headless_motion_factory.h  headless_touch_factory.cpp  headless_touch_factory.h
src/common/: CMakeLists.txt  arch.h  assert.h  common_funcs.h  common_paths.h  file_util.cpp  file_util.h  microprofile.h  microprofileui.h  settings.cpp  settings.h  telemetry.cpp  telemetry.h  thread.cpp  vector_math.h
src/common/aarch64/: cpu_detect.cpp  cpu_detect.h  oaknut_abi.h  oaknut_util.h
src/common/logging/: backend.cpp  formatter.h  text_formatter.cpp  types.h
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h  xbyak_util.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  memory.h  movie.cpp  savestate.cpp  telemetry_session.cpp  telemetry_session.h
src/core/arm/: exclusive_monitor.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/arm/skyeye_common/: armstate.cpp
src/core/arm/skyeye_common/vfp/: vfp_helper.h
src/core/cheats/: gateway_cheat.cpp
src/core/file_sys/: archive_extsavedata.cpp  archive_extsavedata.h  disk_archive.h  plugin_3gx.cpp  plugin_3gx.h
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp
src/core/hle/kernel/: hle_ipc.cpp  hle_ipc.h  ipc.cpp  kernel.h  process.cpp  shared_page.cpp  svc.cpp  thread.cpp  vm_manager.cpp
src/core/hle/service/ac/: ac.cpp
src/core/hle/service/am/: am.cpp
src/core/hle/service/apt/: apt.cpp
src/core/hle/service/cfg/: cfg.cpp  cfg_defaults.cpp
src/core/hle/service/csnd/: csnd_snd.cpp
src/core/hle/service/fs/: file.cpp
src/core/hle/service/http/: http_c.cpp
src/core/hle/service/ir/: ir_user.cpp
src/core/hle/service/ldr_ro/: cro_helper.cpp  ldr_ro.cpp
src/core/hle/service/nfc/: nfc_device.cpp
src/core/hle/service/nwm/: nwm_uds.cpp  nwm_uds.h  uds_beacon.cpp
src/core/hle/service/ps/: ps_ps.cpp  ps_ps.h
src/core/hle/service/soc/: soc_u.cpp
src/core/hle/service/ssl/: ssl_c.cpp  ssl_c.h
src/core/loader/: ncch.cpp
src/encore/: CMakeLists.txt  audio_resampler.cpp  audio_resampler.h  cinterface.cpp  config_headless.cpp  config_headless.h  encore_context.cpp  encore_context.h  precompiled_headers.h  savestate_mt.cpp  savestate_mt.h
src/encore/emu_window/: emu_window_headless.cpp  emu_window_headless.h  emu_window_headless_gl.cpp  emu_window_headless_gl.h  emu_window_headless_sw.cpp  emu_window_headless_sw.h
src/encore/input_factory/: headless_axis_factory.cpp  headless_axis_factory.h  headless_button_factory.cpp  headless_button_factory.h  headless_input_factory.h  headless_motion_factory.cpp  headless_motion_factory.h  headless_touch_factory.cpp  headless_touch_factory.h
src/input_common/: CMakeLists.txt  main.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  renderer_base.h  video_core.cpp
src/video_core/custom_textures/: custom_tex_manager.cpp
src/video_core/debug_utils/: debug_utils.h
src/video_core/pica/: packed_attribute.h  pica_core.cpp  vertex_loader.cpp
src/video_core/rasterizer_cache/: rasterizer_cache.h  rasterizer_cache_base.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_shader_util.cpp  gl_texture_mailbox.h  post_processing_opengl.cpp  post_processing_opengl.h  renderer_opengl.cpp
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  renderer_vulkan.h  vk_instance.h  vk_platform.cpp  vk_present_window.cpp  vk_present_window.h
src/video_core/shader/: shader.cpp  shader_jit.cpp  shader_jit.h  shader_jit_a64_compiler.cpp  shader_jit_a64_compiler.h  shader_jit_x64_compiler.cpp  shader_jit_x64_compiler.h
